--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,9 +2,9 @@
   "name": "mcp-frontend",
   "version": "1.0.0",
   "dependencies": {
+    "axios": "^1.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "axios": "^1.6.0"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -13,7 +13,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
